Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,15 +8,15 @@ variables:
   resourceGroupName: 'amir'
   dataFactoryName: 'secondadff'
   location: 'Canada Central'  # Change based on your region
-  templateFile: 'ARMTemplateForFactory.json'
-  parametersFile: 'ARMTemplateParametersForFactory.json'
+  templateFile: '$(System.DefaultWorkingDirectory)/ADF/Pipelines/ARMTemplateForFactory.json'
+  parametersFile: '$(System.DefaultWorkingDirectory)/ADF/Pipelines/ARMTemplateParametersForFactory.json'
 
 steps:
 - task: AzureResourceManagerTemplateDeployment@3
   displayName: 'Deploy ARM Template to ADF'
   inputs:
     deploymentScope: 'Resource Group'
-    azureResourceManagerConnection: 'connectionboi'  # Create this in DevOps
+    azureResourceManagerConnection: 'connectionboi'
     subscriptionId: '1cf1a497-23f9-40eb-8a05-e23b72149b49'
     action: 'Create Or Update Resource Group'
     resourceGroupName: '$(resourceGroupName)'
@@ -24,4 +24,4 @@ steps:
     templateLocation: 'Linked artifact'
     csmFile: '$(templateFile)'
     csmParametersFile: '$(parametersFile)'
-    deploymentMode: 'Incremental'  # Ensures only changes are deployed
+    deploymentMode: 'Incremental'
